concord_macros/tests/trybuild/fail/pagination/pagination_unknown_field.stderr
error: unknown pagination field `cursor` for OffsetLimitPagination; allowed fields: offset, limit
  --> tests/trybuild/fail/pagination/pagination_unknown_field.rs:15:9
   |
15 |         cursor = start,
   |         ^^^^^^
